# fedra-thesis

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  TODO.md  memory.x  ocd.gdbinit  st.gdbinit
.cargo/: config.toml
coap-utils/: coap-broker.js  exec.js  index.js  package-lock.json  package.json  request.js  server-multicast.js  server-observe.js  server-resources.js  server-river.js
coap-utils/coap-bench/src/: main.rs
coap-utils/wireshark/: node-loopback.pcapng
docs/ariadne/: README.md
docs/bibliography/: README.md
docs/fedra/: README.md
docs/fedra/images/: architecture.drawio
docs/runtime/: README.md
elsevier/: README  cas-dc-template.tex  cas-refs.bib
elsevier/sections/: main.tex
fedra/: .gdbinit  Cargo.toml  Documentation.md  Embed.toml  Makefile.toml  README.md  memory.x
fedra/.cargo/: config  config.toml
fedra/images/: architecture.drawio
fedra/src/: intrinsics.rs  main.rs  memory.rs  network.rs  wasm_host.rs
infra/: README.md
nodejs/: package-lock.json  ping.js  request.js
paper/: access.tex  bibliography.mjs
paper/sections/: bibliography.tex  main.tex
src/: allocator.rs  intrinsics.rs  main.rs  memory.rs  network.rs  qemu.rs  time.rs
thesis/: tesi-config.tex  tesi.ist  tesi.tex
thesis/sections/: bibliography.tex  colophon.tex  frontespizio.tex  indici.tex  main.tex  ringraziamenti.tex  sommario.tex
thesis/slides/: laurea.md
