[workspace]

members = [
  "fedra"
]

default-members = ["fedra"]

# These patches can be removed and it will compile nevertheless. But the runtime will crush because
# wasmi allocates 1GB of heap by default
[patch.crates-io]
wasmi = { path = "./patches/wasmi" }
parity-wasm = { path = "./patches/parity-wasm" }
coap-lite = { path = "./patches/coap-lite" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "off" # better optimizations
opt-level = "s"
