[package]
name = "fedra"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4.0"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
rtt-target = {  version = "0.2.2", features = ["cortex-m"]}
stm32f4 = { version = "0.12.1", features = ["stm32f429", "rt"] }
stm32f4xx-hal = { version = "0.8.3", features = ["stm32f429", "rt"]}
wasm3 = { version = "0.1.3", default-features = false, features = ["use-32bit-slots"] }
libm = "0.2.1"

[patch.crates-io]
wasm3 = { path = "../../wasm3-rs" }

# this lets you use `cargo fix`!
[[bin]]
name = "fedra"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
